--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         "psr-4": {
             "PluginBoilerplate\\": "src/"
         }
+    },
+    "scripts": {
+        "phpcs": "phpcs --standard=phpcs.xml"
     }
 }
