--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         }
     },
     "scripts": {
-        "phpcs": "phpcs --standard=phpcs.xml"
+        "phpcs": "vendor/bin/phpcs --standard=phpcs.xml"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
