--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "phpcs": "vendor/bin/phpcs --standard=phpcs.xml"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "wp-coding-standards/wpcs": "^2.3"
     }
 }
