Fix errors found in the code

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     },
     "scripts": {
-        "phpcs": "vendor/bin/phpcs --standard=phpcs.xml"
+        "phpcs": "vendor/bin/phpcs --standard=phpcs.xml",
+        "fix": "vendor/bin/phpcbf --standard=phpcs.xml"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
